// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> includes a nav-bar-brand that specifies the application name 1`] = `
<Navbar
  color="navbar-dark bg-dark"
  expand="md"
  light={true}
  tag="nav"
>
  <NavbarBrand
    href="/"
    tag="a"
  >
    <h2
      className="orangify"
    >
       Cake | POS 
    </h2>
  </NavbarBrand>
  <NavbarToggler
    tag="button"
    type="button"
  />
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <NavItem
        tag="li"
      >
        <Button
          color="secondary"
          onClick={[Function]}
          style={
            Object {
              "color": "orange",
            }
          }
          tag="button"
        >
          Log Out
        </Button>
      </NavItem>
    </Nav>
  </Collapse>
</Navbar>
`;

exports[`<Header /> should render a anchor tag 1`] = `
<a
  className="App-link"
  href="https://reactjs.org"
  rel="noopener noreferrer"
  target="_blank"
>
  Learn React
</a>
`;

exports[`<Header /> should render correctly 1`] = `
<div>
  <Navbar
    color="navbar-dark bg-dark"
    expand="md"
    light={true}
    tag="nav"
  >
    <NavbarBrand
      href="/"
      tag="a"
    >
      <h2
        className="orangify"
      >
        Cake | POS
      </h2>
    </NavbarBrand>
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <NavItem
        tag="li"
      >
        <Button
          className="orangify"
          color="secondary"
          id="logout-btn"
          onClick={[Function]}
          tag="button"
        >
          Log Out
        </Button>
      </NavItem>
    </Nav>
  </Navbar>
  <br />
</div>
`;

exports[`App should render a anchor tag 1`] = `
<a
  className="App-link"
  href="https://reactjs.org"
  rel="noopener noreferrer"
  target="_blank"
>
  Learn React
</a>
`;
